--- a/package.json
+++ b/package.json
@@ -1,32 +1,50 @@
 {
-  "name": "rollup-plugin-auto-inject-version",
+  "name": "rollup-plugin-version-injector",
   "version": "1.0.0",
   "description": "rollup.js plugin to auto inject the version into the source code",
-  "main": "dist/index.js",
+  "main": "dist/rollup-plugin-version-injector.cjs.js",
+  "module": "dist/rollup-plugin-version-injector.es.js",
   "scripts": {
-    "build": "tsc",
-    "test": "exit 1"
+    "build": "tsc && rollup -c",
+    "test": "jest",
+    "test:watch": "jest --watch --collectCoverage=false",
+    "lint": "npm run lint:js && npm run lint:ts",
+    "lint:js": "semistandard",
+    "lint:ts": "tslint --project . --config tslint.json"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/djhouseknecht/rollup-plugin-auto-inject-version.git"
+    "url": "git+https://github.com/djhouseknecht/rollup-plugin-version-injector.git"
   },
   "keywords": [
     "rollup",
-    "bundle",
-    "build"
+    "rollup-plugin",
+    "es2015",
+    "npm",
+    "modules"
   ],
   "author": "David Houseknecht <david.j.houseknecht@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/djhouseknecht/rollup-plugin-auto-inject-version/issues"
+    "url": "https://github.com/djhouseknecht/rollup-plugin-version-injector/issues"
   },
-  "homepage": "https://github.com/djhouseknecht/rollup-plugin-auto-inject-version#readme",
+  "homepage": "https://github.com/djhouseknecht/rollup-plugin-version-injector#readme",
   "devDependencies": {
+    "@types/dateformat": "^3.0.0",
+    "@types/jest": "^24.0.15",
     "@types/node": "^12.0.8",
+    "jest": "^24.8.0",
+    "rollup": "^1.15.6",
+    "rollup-plugin-typescript": "^1.0.1",
+    "semistandard": "^13.0.1",
+    "ts-jest": "^24.0.2",
+    "tslib": "^1.10.0",
+    "tslint": "^5.18.0",
+    "tslint-config-semistandard": "^8.0.1",
     "typescript": "^3.5.2"
   },
   "dependencies": {
-    "rollup-pluginutils": "^2.8.1"
+    "chalk": "^2.4.2",
+    "dateformat": "^3.0.3"
   }
 }
