--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,24 @@
 {
 	"compilerOptions": {
+		"module": "ES6",
 		"target": "es6",
-		"module": "commonjs",
+		"moduleResolution": "node",
+		"sourceMap": true,
 		"declaration": true,
+		"removeComments": true,
+		"noImplicitAny": false,
+		"rootDir": "./src",
 		"outDir": "./dist",
-		"strict": true,
 		"noUnusedLocals": true,
-		"noUnusedParameters": true,
-		"noImplicitReturns": true,
-		"noEmit": true,
-		"esModuleInterop": true
+		"noUnusedParameters": false,
+		"esModuleInterop": true,
+		"strict": true,
 	},
-	"include": [
-		"src/**/*.ts"
-	],
 	"exclude": [
 		"node_modules",
 		"**/test/*"
+	],
+	"include": [
+		"src/**/*.ts"
 	],
 }
