--- a/package.json
+++ b/package.json
@@ -30,10 +30,14 @@
   "bugs": {
     "url": "https://github.com/djhouseknecht/rollup-plugin-version-injector/issues"
   },
+  "files": [
+    "dist/"
+  ],
   "homepage": "https://github.com/djhouseknecht/rollup-plugin-version-injector#readme",
   "devDependencies": {
     "@types/dateformat": "^3.0.0",
     "@types/jest": "^24.0.15",
+    "@types/lodash": "^4.14.134",
     "@types/node": "^12.0.8",
     "jest": "^24.8.0",
     "rollup": "^1.15.6",
@@ -47,6 +51,7 @@
   },
   "dependencies": {
     "chalk": "^2.4.2",
-    "dateformat": "^3.0.3"
+    "dateformat": "^3.0.3",
+    "lodash": "^4.17.11"
   }
 }
