--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "pre-push": [
     "build",
+    "lint",
     "test"
   ],
   "repository": {
@@ -59,6 +60,8 @@
     "@types/lodash": "^4.14.150",
     "@types/node": "^12.12.37",
     "codecov": "^3.6.5",
+    "commitizen": "^4.0.4",
+    "cz-conventional-changelog": "^3.1.0",
     "jest": "^24.9.0",
     "pre-push": "^0.1.1",
     "rollup": "^1.32.1",
