--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "test": "jest",
     "test:watch": "jest --watch --collectCoverage=false",
     "lint": "npm run lint:js && npm run lint:ts",
+    "lint:fix": "npm run lint:js:fix && npm run lint:ts:fix",
     "lint:js": "semistandard",
+    "lint:js:fix": "semistandard --fix",
     "lint:ts": "tslint --project . --config tslint.json",
+    "lint:ts:fix": "tslint --project . --config tslint.json --fix",
     "semantic-release": "semantic-release",
     "commit": "git-cz",
     "codecov": "codecov"
   },
   "pre-push": [
-    "build",
     "lint",
+    "build",
     "test"
   ],
   "repository": {
